# volunteer_portal_diplome

./: README.md
backend/: .env  Dockerfile  pyproject.toml  requirements.txt  volunteer_db  volunteer_db2
backend/api/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_notification_post_comment_rating_application_like.py  0002_transaction.py
backend/config/: settings.py  urls.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx
frontend/src/api/: axiosInstance.ts
frontend/src/components/: AvatarUpload.tsx  EditProfileModal.tsx  Header.tsx
frontend/src/pages/: AdminDashboard.tsx  EventDetailPage.tsx  EventsPage.tsx  LoginPage.tsx  MainPage.tsx  NotificationsPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts
