[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gradrrs <artemlal1998@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
Django = ">=6.0.5,<7.0.0"
djangorestframework = ">=3.17.1,<4.0.0"
djangorestframework-simplejwt = ">=5.5.1,<6.0.0"
djoser = ">=2.3.3,<3.0.0"
psycopg2-binary = ">=2.9.12,<3.0.0"
python-dotenv = ">=1.2.2,<2.0.0"
django-cors-headers = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = ">=26.3.1,<27.0.0"
isort = ">=8.0.1,<9.0.0"
flake8 = ">=7.3.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"